Clear EXCLUDE_REPOS array in index.html
Cleared the EXCLUDE_REPOS array to no longer exclude specific repositories.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       TAGLINE: 'Building things that work (mostly)',
 
       // Repos to exclude (by name)
-      EXCLUDE_REPOS: ['datasheet-search', 'rlc-calculator', 'biquad-pwa', 'jk-bms-app', 'pq-bms-app', 'engineering-calcs-app', 'control-tuner-app', 'label-designer-app', 'filter-design-studio-app', 'datasheet-search-app', 'pages'], // Exclude embedded apps and the pages repo itself
+      EXCLUDE_REPOS: [], // Exclude embedded apps and the pages repo itself
 
       // Only show repos with these topics (leave empty to show all)
       FILTER_TOPICS: [],
